--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ fonttools==4.38.0
 fqdn==1.5.1
 fst-pso==1.8.1
 funcy==1.18
+future==0.18.3
 FuzzyTM==2.0.5
 gensim==4.3.0
 idna==3.4
@@ -136,6 +137,7 @@ scipy==1.10.0
 seaborn==0.12.2
 Send2Trash==1.8.0
 simpful==2.9.0
+six==1.16.0
 sklearn==0.0.post1
 smart-open==6.3.0
 sniffio==1.3.0
